feat(serve): 新建system/database 数据库操作接口
