# src/system/database/dto/update-database.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateDatabaseDto } from './create-database.dto';
+
+export class UpdateDatabaseDto extends PartialType(CreateDatabaseDto) {}
